--- a/CIFAR_CNN.ipynb
+++ b/CIFAR_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-10-27T06:01:14.719225Z",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-10-27T06:01:24.118814Z",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-10-27T06:01:26.536992Z",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-10-27T06:01:26.560004Z",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-10-27T06:01:26.592377Z",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-10-27T06:01:26.619840Z",
@@ -314,28 +314,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "469/469 [==============================] - 13s 23ms/step - loss: 0.6725 - accuracy: 0.7157 - val_loss: 0.5164 - val_accuracy: 0.7930\n",
+      "469/469 [==============================] - 8s 16ms/step - loss: 0.6479 - accuracy: 0.7291 - val_loss: 0.4574 - val_accuracy: 0.8227\n",
       "Epoch 2/10\n",
-      "469/469 [==============================] - 10s 22ms/step - loss: 0.4495 - accuracy: 0.8273 - val_loss: 0.4430 - val_accuracy: 0.8300\n",
+      "469/469 [==============================] - 8s 16ms/step - loss: 0.4383 - accuracy: 0.8296 - val_loss: 0.4184 - val_accuracy: 0.8397\n",
       "Epoch 3/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.3907 - accuracy: 0.8533 - val_loss: 0.3763 - val_accuracy: 0.8583\n",
+      "469/469 [==============================] - 7s 16ms/step - loss: 0.3777 - accuracy: 0.8551 - val_loss: 0.3575 - val_accuracy: 0.8670\n",
       "Epoch 4/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.3526 - accuracy: 0.8663 - val_loss: 0.3467 - val_accuracy: 0.8687\n",
+      "469/469 [==============================] - 7s 15ms/step - loss: 0.3226 - accuracy: 0.8763 - val_loss: 0.3122 - val_accuracy: 0.8860\n",
       "Epoch 5/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.3063 - accuracy: 0.8839 - val_loss: 0.3061 - val_accuracy: 0.8860\n",
+      "469/469 [==============================] - 7s 16ms/step - loss: 0.2914 - accuracy: 0.8901 - val_loss: 0.3352 - val_accuracy: 0.8717\n",
       "Epoch 6/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.2760 - accuracy: 0.8955 - val_loss: 0.3057 - val_accuracy: 0.8877\n",
+      "469/469 [==============================] - 7s 16ms/step - loss: 0.2584 - accuracy: 0.9037 - val_loss: 0.3469 - val_accuracy: 0.8763\n",
       "Epoch 7/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.2504 - accuracy: 0.9060 - val_loss: 0.3016 - val_accuracy: 0.8927\n",
+      "469/469 [==============================] - 7s 16ms/step - loss: 0.2279 - accuracy: 0.9165 - val_loss: 0.2935 - val_accuracy: 0.8990\n",
       "Epoch 8/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.2273 - accuracy: 0.9149 - val_loss: 0.2982 - val_accuracy: 0.8920\n",
+      "469/469 [==============================] - 8s 16ms/step - loss: 0.2025 - accuracy: 0.9223 - val_loss: 0.3109 - val_accuracy: 0.8860\n",
       "Epoch 9/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.2073 - accuracy: 0.9196 - val_loss: 0.3159 - val_accuracy: 0.8960\n",
+      "469/469 [==============================] - 8s 16ms/step - loss: 0.1796 - accuracy: 0.9334 - val_loss: 0.2796 - val_accuracy: 0.8977\n",
       "Epoch 10/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.1793 - accuracy: 0.9323 - val_loss: 0.2902 - val_accuracy: 0.8997\n",
-      "94/94 - 1s - loss: 0.2902 - accuracy: 0.8997 - 826ms/epoch - 9ms/step\n",
-      "Test accuracy: 0.8996666669845581\n",
-      "Test f1 macro: 0.8996666669845581\n"
+      "469/469 [==============================] - 8s 17ms/step - loss: 0.1550 - accuracy: 0.9410 - val_loss: 0.3510 - val_accuracy: 0.8933\n",
+      "94/94 - 1s - loss: 0.3510 - accuracy: 0.8933 - 558ms/epoch - 6ms/step\n",
+      "Test accuracy: 0.8933333158493042\n",
+      "Test f1 macro: 0.8933333158493042\n"
      ]
     },
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability that the given image is 8 : 7.620275497436523\n"
+      "Probability that the given image is 8 : 7.562671184539795\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
      "output_type": "stream",
      "text": [
       "layer name:  dense\n",
-      "[(0, 0.0), (1, 0.0), (2, 0.0), (3, 0.29544246), (4, 0.0), (5, 0.0), (6, 0.0), (7, 0.0), (8, 0.0), (9, 0.0), (10, 0.0), (11, 0.0), (12, 0.0), (13, 0.031000875), (14, 0.0), (15, 0.0), (16, 1.9630154), (17, 0.0), (18, 0.0), (19, 4.4168334), (20, 3.6517425), (21, 1.5080177), (22, 0.0), (23, 0.0), (24, 0.7191136), (25, 0.41019532), (26, 3.439588), (27, 0.0), (28, 0.0), (29, 3.3744328), (30, 0.0), (31, 2.75001), (32, 0.0), (33, 0.30207995), (34, 0.15912643), (35, 0.0), (36, 0.0), (37, 0.0), (38, 0.0), (39, 0.4718022), (40, 2.777836), (41, 3.2731771), (42, 0.0), (43, 0.0), (44, 0.0), (45, 0.0), (46, 0.0), (47, 0.0), (48, 2.9615102), (49, 0.0), (50, 0.0), (51, 0.129308), (52, 0.0), (53, 0.05472099), (54, 0.0), (55, 0.0), (56, 0.0), (57, 0.19726247), (58, 1.5428745), (59, 0.0), (60, 0.0), (61, 0.0), (62, 0.0), (63, 3.3626294)]\n"
+      "[(0, 0.0), (1, 0.0), (2, 0.90366423), (3, 0.0), (4, 0.0), (5, 0.0), (6, 2.498497), (7, 0.0), (8, 0.0), (9, 0.0), (10, 0.0), (11, 0.0), (12, 0.0), (13, 0.0), (14, 0.0), (15, 2.2441802), (16, 0.0), (17, 0.0), (18, 0.0), (19, 0.0), (20, 0.0), (21, 0.0), (22, 2.2280235), (23, 2.9751995), (24, 0.5225769), (25, 0.0), (26, 1.4255229), (27, 0.3640228), (28, 3.0391135), (29, 1.4962168), (30, 2.899793), (31, 2.3527718), (32, 0.3290032), (33, 1.2333744), (34, 0.16551517), (35, 0.0), (36, 0.0), (37, 0.0), (38, 2.4068584), (39, 0.0), (40, 0.049495794), (41, 0.0), (42, 0.0), (43, 2.2278397), (44, 0.0), (45, 2.6702397), (46, 0.0), (47, 1.7061825), (48, 0.0), (49, 0.77635825), (50, 0.0), (51, 0.33757868), (52, 0.050037283), (53, 1.3667085), (54, 0.0), (55, 0.0), (56, 0.0), (57, 0.41536754), (58, 0.51909435), (59, 0.0), (60, 2.3396807), (61, 0.82782173), (62, 0.0), (63, 0.0)]\n"
      ]
     }
    ],
@@ -466,6 +466,98 @@
     "\n",
     "# Display the output of the last convolutional layer\n",
     "print(list(zip(list(range(len(activations_penultimate[0]))), activations_penultimate[0])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Model\n",
+    "from keras.applications.vgg16 import preprocess_input\n",
+    "\n",
+    "def grad_cam(model, img_array, layer_name):\n",
+    "    grad_model = Model(\n",
+    "        [model.inputs], [model.get_layer(layer_name).output, model.output]\n",
+    "    )\n",
+    "\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        conv_outputs, predictions = grad_model(img_array)\n",
+    "        class_idxs_sorted = np.argsort(predictions[0])[::-1]\n",
+    "        top_class_idx = class_idxs_sorted[0]\n",
+    "        loss = predictions[:, top_class_idx]\n",
+    "\n",
+    "    grads = tape.gradient(loss, conv_outputs)\n",
+    "    pooled_grads = tf.reduce_mean(grads, axis=(0, 1, 2))\n",
+    "\n",
+    "    conv_output = conv_outputs[0]\n",
+    "\n",
+    "    # Resize conv_output to match the spatial dimensions of pooled_grads\n",
+    "    conv_output_resized = tf.image.resize(conv_output, (6,6))\n",
+    "\n",
+    "    heatmap = tf.reduce_mean(tf.multiply(conv_output_resized, tf.expand_dims(pooled_grads, axis=0)), axis=-1)\n",
+    "    heatmap = np.maximum(heatmap, 0)\n",
+    "    heatmap /= tf.reduce_max(heatmap)\n",
+    "\n",
+    "    return heatmap.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_layer = 'flatten'\n",
+    "img_array = test_images[61]\n",
+    "img_array = np.expand_dims(img_array, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 32, 32, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "last_layer = 'conv2d_1'  # Choose the last convolutional layer\n",
+    "\n",
+    "img_array = test_images[61]\n",
+    "img_array = np.expand_dims(img_array, axis=0)\n",
+    "print(img_array.shape)\n",
+    "# Get the class activation map (CAM) for the image\n",
+    "heatmap = grad_cam(model, img_array, last_layer)\n",
+    "\n",
+    "# Resize the heatmap to the size of the original image\n",
+    "heatmap_resized = cv2.resize(heatmap, (img_array.shape[2], img_array.shape[1]))\n",
+    "\n",
+    "# Normalize the heatmap\n",
+    "heatmap_normalized = np.uint8(255 * heatmap_resized)\n",
+    "\n",
+    "# Apply colormap\n",
+    "heatmap_colormap = cv2.applyColorMap(heatmap_normalized, cv2.COLORMAP_JET)\n",
+    "\n",
+    "# Convert img_array[0] to the same data type as heatmap\n",
+    "img_array_uint8 = np.uint8(img_array[0])\n",
+    "\n",
+    "# Superimpose the heatmap on the original image\n",
+    "superimposed_img = cv2.addWeighted(img_array_uint8, 0.5, heatmap_colormap, 0.5, 0)\n",
+    "superimposed_img = cv2.resize(superimposed_img, (800, 600))\n",
+    "# Display the image\n",
+    "cv2.imshow('Grad-CAM', superimposed_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
